UI alignment fixes.

--- a/ui/fe/css/bootstrap-custom.scss
+++ b/ui/fe/css/bootstrap-custom.scss
@@ -11,6 +11,9 @@
 
 .navbar-btn {
     margin-top: 5px !important;
+    margin-left: 5px !important;
+    margin-right: 5px !important;
+    margin-bottom: 5px !important;
 }
 
 .nav-buttons {
